# computational-mathematics

lab1/: BaseFunc.cpp  BaseFunc.h  Bisection.cpp  Bisection.h  CMakeLists.txt  Const.h  CubicPolynomial.cpp  CubicPolynomial.h  FindRootCubicPol.cpp  FindRootCubicPol.h  Polynomial.h  Reader.cpp  Reader.h  Segment.cpp  Segment.h  SquarPolynomial.cpp  SquarPolynomial.h  main.cpp  test.cpp
lab2/src/main/kotlin/: Main.kt  Matrix.kt  RunThroughMethod.kt  Vector.kt
